# particle-sim

./: .gitignore  CMakeLists.txt  README.md  poster.html  poster_requirements.md  presentation_script.md  video_req.md
include/: particle.h  particle_cpu.h  particle_gpu.h
include/glad/: glad.h
src/: glad.c  main.cu  particle_cpu.cpp  particle_gpu.cu
